Реализовано создание базы и вывод в новое окно!

--- a/Shop/Shop.csproj
+++ b/Shop/Shop.csproj
@@ -133,6 +133,8 @@
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
+    <Content Include="Views\Home\Computers.cshtml" />
+    <Content Include="Views\Home\Computers2.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
