--- a/Shop/Shop.csproj
+++ b/Shop/Shop.csproj
@@ -109,6 +109,7 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -135,6 +136,7 @@
     <Content Include="packages.config" />
     <Content Include="Views\Home\Computers.cshtml" />
     <Content Include="Views\Home\Computers2.cshtml" />
+    <Content Include="Views\Home\OrdersData.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
