--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /Shop/obj
 /.vs/Shop
 /.vs/Shop/v14/.suo
+/Shop/App_Data/ItemContext.mdf
+/Shop/App_Data/ItemContext_log.ldf
+/Shop/App_Data/aspnet-Autentification-20160115073312.mdf
+/Shop/App_Data/aspnet-Autentification-20160115073312_log.ldf
