Добавленны bundle для оптимизации
Не все скрипты в бандлах

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Shop/App_Data/ItemContext_log.ldf
 /Shop/App_Data/aspnet-Autentification-20160115073312.mdf
 /Shop/App_Data/aspnet-Autentification-20160115073312_log.ldf
+Shop.v12.suo
