--- a/Shop/Shop.csproj
+++ b/Shop/Shop.csproj
@@ -148,11 +148,11 @@
     <Content Include="App_Data\ItemContext_log.ldf">
       <DependentUpon>ItemContext.mdf</DependentUpon>
     </Content>
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\home.css" />
     <Content Include="Content\Images\img1.jpg" />
     <Content Include="Content\Images\img2.jpg" />
     <Content Include="Content\Images\img4.jpg" />
-    <Content Include="Content\normalize.css" />
     <Content Include="Content\style.css" />
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -165,7 +165,9 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
