--- a/Shop/Web.config
+++ b/Shop/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="ItemConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\ItemContext.mdf" />
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Autentification-20160115073312.mdf;Initial Catalog=aspnet-Autentification-20160115073312;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Shop-20160128113653.mdf;Initial Catalog=Shop-20160128113653;Integrated Security=True"
+       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -29,8 +30,14 @@
         <add namespace="System.Web.Optimization" />
       </namespaces>
     </pages>
+    <authentication mode="None" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <system.webServer>
+    <modules>
+      <remove name="FormsAuthenticationModule" />
+    </modules>
+  </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
