--- a/Shop/Shop.csproj
+++ b/Shop/Shop.csproj
@@ -153,6 +153,7 @@
     <Content Include="Content\Images\img1.jpg" />
     <Content Include="Content\Images\img2.jpg" />
     <Content Include="Content\Images\img4.jpg" />
+    <Content Include="Content\Images\shop.jpg" />
     <Content Include="Content\style.css" />
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
